# roaster

./: .gitignore  Cargo.toml  test
math_utils/: Cargo.toml  README.MD
math_utils/src/: lib.rs
math_utils/src/matrix/: mat.rs  matrixn.rs  matrixnxm.rs  mod.rs
spectrum/: Cargo.toml  README.md
spectrum/examples/image/: main.rs
spectrum/examples/light/: main.rs
spectrum/examples/sphere/: main.rs
spectrum/src/: lib.rs
spectrum/src/base/: camera.rs  intersect.rs  light.rs  material.rs  mod.rs  physics.rs  ray.rs
spectrum/src/bvh/: aabb.rs  bvh.rs  mod.rs
spectrum/src/format/: image_buff.rs  image_file.rs
spectrum/src/material/: background.rs  bsdf.rs
spectrum/src/object/: mesh.rs  mod.rs  sphere.rs
spectrum/src/renderer/: renderer.rs
spectrum/src/scene/: canvas.rs  scene.rs
src/: main.rs
src/editor/: config.rs  editor.rs  mod.rs  signal.rs
titanium/: Cargo.toml  READ.MD
titanium/doc/: structure.dot  user interface.dot
titanium/examples/ui/: main.rs
titanium/shader/: base.frag  base.vert
titanium/shader/ui/: button.frag  button.vert  text.frag  text.vert
titanium/src/: lib.rs  main.rs
titanium/src/application/: application.rs  font.rs  mod.rs  window.rs  world.rs
titanium/src/backend/glium/: application.rs  event.rs  mod.rs
titanium/src/backend/glium/renderer/: font.rs  mod.rs  renderer.rs
titanium/src/backend/glium/shader/: canvas.rs  frame.rs  glsl.rs  material.rs  mod.rs  shader.rs
titanium/src/base/: alias.rs  color.rs  mod.rs  transform.rs  vertex.rs
titanium/src/canvas/: canvas.rs  font.rs  text.rs
titanium/src/canvas/graphics/: circle.rs  graphics.rs  mod.rs  points.rs  rectangle.rs  round_rectangle.rs
titanium/src/event/: event.rs
titanium/src/format/: mod.rs
titanium/src/model/: cube.rs  format.rs  mod.rs
titanium/src/model/generate/: cube.rs  grid.rs  mod.rs
titanium/src/physics/: object.rs
titanium/src/renderer/: mod.rs  renderer.rs
titanium/src/renderer/base/: alias.rs  mod.rs  transform.rs  vertex.rs
titanium/src/renderer/hal/shader/: ui.frag  ui.vert
titanium/src/renderer/pipeline/: shader.rs  texture.rs
titanium/src/renderer/scene/: light.rs  mod.rs  object.rs
titanium/src/renderer/shader/: shader.rs  texture.rs
titanium/src/renderer/ui/: font.rs  mod.rs  primetype.rs  text.rs
titanium/src/scene/: camera.rs  light.rs  material.rs  mesh.rs  mod.rs  object.rs  scene.rs
titanium/src/user_interface/: layout.rs  mod.rs  widget.rs
(+10 files in other folders)
