[package]
name = "roaster"
version = "0.1.0"
authors = ["dlingyang <ceamel@hotmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
winit = "*"
gfx-hal = "*"
shaderc = "*"
log = "*"
simple_logger = "*"
titanium = {path = "titanium"} 
spectrum = {path = "spectrum"}
math_utils = {path = "math_utils"}

[workspace]
members = ["math_utils","titanium","spectrum"]
