[package]
name = "roaster"
version = "0.1.0"
authors = ["dlingyang <ceamel@hotmail.com>"]
edition = "2018"

[features]
default = []

[lib]
name = "roaster"
path = "src/lib.rs"

[dependencies]
log = "*"
simple_logger = "*"
serde = "*"
serde_derive = "*"
toml = "*"
titanium = {path = "../titanium"} 
rmu = {path = "../rmu"}
