[package]
name = "titanium"
version = "0.1.0"
authors = ["ydl"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "titanium"
path = "src/lib.rs"

[dependencies]
glium = "0.25.1"

[dependencies.rusttype]
version = "*"
features = ["gpu_cache"]