[package]
name = "titanium"
version = "0.1.0"
authors = ["ydl"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "titanium"
path = "src/lib.rs"

[dependencies]
glium = { version = "0.27.0", optional = true }

[dependencies.rusttype]
version = "*"
features = ["gpu_cache"]

[features]
default = ["opengl_glium"]
opengl_glium = ["glium"]
